--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   php:
     container_name: rpi_php
-    image: ${ARCH}php:7.3-fpm
+    image: ${ARCH}php:7.4-fpm
     volumes:
       - ./src:/var/www/html/
       - ./log:/var/log/
@@ -25,6 +25,7 @@ services:
       - ${HTTP_PORT}:80
     volumes:
       - ./src:/var/www/html/
+      - ./log:/var/log/
 
   composer:
     container_name: rpi_composer
